--- a/app/src/main/res/layout/activity_academy_profile.xml
+++ b/app/src/main/res/layout/activity_academy_profile.xml
@@ -69,7 +69,7 @@
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:padding="10dp"
-                        android:text="Educational Academy"
+                        android:text=" Fusion VFX academy Center"
                         android:textColor="@color/colorAccent"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -134,7 +134,7 @@
                                         android:layout_gravity="center"
                                         android:layout_marginBottom="10dp"
                                         android:gravity="center"
-                                        android:text="@string/bio_profile3"
+                                        android:text="The Pioneers and best choice for learning graphics , Multimedia and Audio Video Production​"
                                         android:textColor="@color/colorAccent"
                                         android:textSize="10dp" />
                                 </LinearLayout>
@@ -142,7 +142,7 @@
                                 <LinearLayout
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_margin="10dp"
+                                    android:layout_gravity="center"
                                     android:background="@color/track_color"
                                     android:gravity="center"
                                     android:orientation="horizontal">
@@ -282,7 +282,7 @@
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
-                                                android:text="  "
+                                                android:text="in 2002"
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -307,7 +307,7 @@
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
-                                                android:text="   "
+                                                android:text="Nasr City "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -332,35 +332,35 @@
                                                 android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
-                                                android:text="    "
+                                                android:text="  Nasr City - Helioplies  "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
 
-                                        <LinearLayout
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:orientation="horizontal">
+                                        <!--<LinearLayout-->
+                                            <!--android:layout_width="wrap_content"-->
+                                            <!--android:layout_height="wrap_content"-->
+                                            <!--android:orientation="horizontal">-->
 
-                                            <TextView
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                android:layout_gravity="center"
-                                                android:layout_marginLeft="5dp"
-                                                android:text="Type : "
-                                                android:textColor="@color/colorAccent"
-                                                android:textSize="15dp" />
+                                            <!--<TextView-->
+                                                <!--android:layout_width="match_parent"-->
+                                                <!--android:layout_height="wrap_content"-->
+                                                <!--android:layout_gravity="center"-->
+                                                <!--android:layout_marginLeft="5dp"-->
+                                                <!--android:text="Type : "-->
+                                                <!--android:textColor="@color/colorAccent"-->
+                                                <!--android:textSize="15dp" />-->
 
-                                            <TextView
-                                                android:id="@+id/uni_profile_type"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                android:layout_gravity="center"
-                                                android:layout_marginLeft="5dp"
-                                                android:text="   "
-                                                android:textColor="@color/colorAccent"
-                                                android:textSize="15dp" />
-                                        </LinearLayout>
+                                            <!--<TextView-->
+                                                <!--android:id="@+id/uni_profile_type"-->
+                                                <!--android:layout_width="match_parent"-->
+                                                <!--android:layout_height="wrap_content"-->
+                                                <!--android:layout_gravity="center"-->
+                                                <!--android:layout_marginLeft="5dp"-->
+                                                <!--android:text="   "-->
+                                                <!--android:textColor="@color/colorAccent"-->
+                                                <!--android:textSize="15dp" />-->
+                                        <!--</LinearLayout>-->
                                     </LinearLayout>
 
                                 </LinearLayout>
@@ -449,7 +449,7 @@
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:gravity="center_vertical"
-                                                android:text=" "
+                                                android:text=" +2 010 2428 666 4"
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -475,7 +475,7 @@
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:gravity="center_vertical"
-                                                android:text=" "
+                                                android:text=" https://www.fusionvfx.com"
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -500,7 +500,7 @@
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:gravity="center_vertical"
-                                                android:text=" "
+                                                android:text=" Egypt ﻿Cairo"
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -564,7 +564,7 @@
                                         android:layout_gravity="center"
                                         android:layout_marginLeft="5dp"
                                         android:gravity="center_vertical"
-                                        android:text=""
+                                        android:text="learning graphics , Multimedia and Audio Video Production"
                                         android:textColor="@color/colorAccent"
                                         android:textSize="15dp" />
                                 </LinearLayout>
