--- a/app/src/main/res/layout/activity_sign_up_individual.xml
+++ b/app/src/main/res/layout/activity_sign_up_individual.xml
@@ -16,19 +16,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:gravity="center"
             android:orientation="vertical"
             android:padding="@dimen/activity_horizontal_margin">
 
-            <android.support.v7.widget.AppCompatTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Career Track"
-                android:textSize="30dp"
-                android:layout_gravity="center"
-                android:padding="20dp"
-                android:textStyle="bold"
-                android:textColor="@color/colorPrimary"
-                />
+            <!--<android.support.v7.widget.AppCompatTextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Career Track"-->
+                <!--android:textSize="30dp"-->
+                <!--android:layout_gravity="center"-->
+                <!--android:padding="20dp"-->
+                <!--android:textStyle="bold"-->
+                <!--android:textColor="@color/colorPrimary"-->
+                <!--/>-->
+
+            <ImageView
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:background="@drawable/item" />
+
+            <ImageView
+                android:layout_width="250dp"
+                android:layout_height="45dp"
+                android:background="@drawable/name1" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
