--- a/app/src/main/res/layout/activity_university_profile.xml
+++ b/app/src/main/res/layout/activity_university_profile.xml
@@ -70,7 +70,7 @@
                         android:layout_gravity="center"
                         android:gravity="center"
                         android:padding="10dp"
-                        android:text="Shorok Academy"
+                        android:text=" El Shorouk Academy"
                         android:textColor="@color/colorAccent"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -135,7 +135,11 @@
                                         android:layout_gravity="center"
                                         android:layout_marginBottom="10dp"
                                         android:gravity="center"
-                                        android:text="@string/bio_profile3"
+                                        android:text="The Engineering Institute has programs in architecture, chemical engineering, civil engineering, biomedical engineering, and electrical and electronic engineering.
+
+The Computer  Information Technology institute has programs in computer science, information systems and business administration.
+
+The Media institute has programs in news production, media production and media marketing. "
                                         android:textColor="@color/colorAccent"
                                         android:textSize="10dp" />
                                 </LinearLayout>
@@ -144,6 +148,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_margin="10dp"
+                                    android:layout_gravity="center"
                                     android:background="@color/track_color"
                                     android:gravity="center"
                                     android:orientation="horizontal">
@@ -270,7 +275,7 @@
 
                                             <TextView
                                                 android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
+                                                android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:text="Foundation Year : "
@@ -283,7 +288,7 @@
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
-                                                android:text="  "
+                                                android:text=" in 1995 "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -308,7 +313,7 @@
                                                 android:layout_height="wrap_content"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
-                                                android:text="   "
+                                                android:text=" Shorouk Cairo Egypt   "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -333,35 +338,35 @@
                                                 android:layout_height="match_parent"
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
-                                                android:text="    "
+                                                android:text="  one branch   "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
 
-                                        <LinearLayout
-                                            android:layout_width="wrap_content"
-                                            android:layout_height="wrap_content"
-                                            android:orientation="horizontal">
+                                        <!--<LinearLayout-->
+                                            <!--android:layout_width="wrap_content"-->
+                                            <!--android:layout_height="wrap_content"-->
+                                            <!--android:orientation="horizontal">-->
 
-                                            <TextView
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                android:layout_gravity="center"
-                                                android:layout_marginLeft="5dp"
-                                                android:text="Type : "
-                                                android:textColor="@color/colorAccent"
-                                                android:textSize="15dp" />
+                                            <!--<TextView-->
+                                                <!--android:layout_width="match_parent"-->
+                                                <!--android:layout_height="wrap_content"-->
+                                                <!--android:layout_gravity="center"-->
+                                                <!--android:layout_marginLeft="5dp"-->
+                                                <!--android:text="Type : "-->
+                                                <!--android:textColor="@color/colorAccent"-->
+                                                <!--android:textSize="15dp" />-->
 
-                                            <TextView
-                                                android:id="@+id/uni_profile_type"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                android:layout_gravity="center"
-                                                android:layout_marginLeft="5dp"
-                                                android:text="   "
-                                                android:textColor="@color/colorAccent"
-                                                android:textSize="15dp" />
-                                        </LinearLayout>
+                                            <!--<TextView-->
+                                                <!--android:id="@+id/uni_profile_type"-->
+                                                <!--android:layout_width="match_parent"-->
+                                                <!--android:layout_height="wrap_content"-->
+                                                <!--android:layout_gravity="center"-->
+                                                <!--android:layout_marginLeft="5dp"-->
+                                                <!--android:text="   "-->
+                                                <!--android:textColor="@color/colorAccent"-->
+                                                <!--android:textSize="15dp" />-->
+                                        <!--</LinearLayout>-->
                                     </LinearLayout>
 
                                 </LinearLayout>
@@ -423,7 +428,8 @@
                                         android:layout_gravity="center"
                                         android:layout_marginLeft="5dp"
                                         android:gravity="center_vertical"
-                                        android:text=""
+                                        android:text="Engineering -Computer and Information Technology"
+
                                         android:textColor="@color/colorAccent"
                                         android:textSize="15dp" />
                                 </LinearLayout>
@@ -486,7 +492,7 @@
                                         android:layout_gravity="center"
                                         android:layout_marginLeft="5dp"
                                         android:gravity="center_vertical"
-                                        android:text="  "
+                                        android:text="Architecture Engineering - Computer Scince  "
                                         android:textColor="@color/colorAccent"
                                         android:textSize="15dp" />
                                 </LinearLayout>
@@ -577,7 +583,7 @@
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:gravity="center_vertical"
-                                                android:text=" "
+                                                android:text="19644 "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -603,7 +609,7 @@
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:gravity="center_vertical"
-                                                android:text=" "
+                                                android:text=" http://www.sha.edu.eg/ "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
@@ -628,7 +634,7 @@
                                                 android:layout_gravity="center"
                                                 android:layout_marginLeft="5dp"
                                                 android:gravity="center_vertical"
-                                                android:text=" "
+                                                android:text="Shorouk Cairo Egypt   "
                                                 android:textColor="@color/colorAccent"
                                                 android:textSize="15dp" />
                                         </LinearLayout>
