--- a/app/src/main/res/layout/path_item.xml
+++ b/app/src/main/res/layout/path_item.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Android Track"
+                android:text="Option A"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
