--- a/app/src/main/res/layout/track_bar_item.xml
+++ b/app/src/main/res/layout/track_bar_item.xml
@@ -37,7 +37,7 @@
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="wrap_content"
             android:layout_height="100dp"
-            android:background="@drawable/cover2" />
+            android:background="@drawable/android_facebook_cover" />
 
         <com.borjabravo.readmoretextview.ReadMoreTextView
             android:id="@+id/track_bio"
@@ -47,7 +47,7 @@
             android:paddingTop="@dimen/feed_item_status_pad_top"
             android:paddingRight="@dimen/feed_item_status_pad_left_right"
             android:paddingBottom="5dp"
-            android:text="@string/bio_profile2"
+            android:text=": Android is an operating system. That is, it’s software that connects hardware to software and provides general services. But more than that, it’s a mobile specific operating system: an OS designed to work on mobile (read: handheld, wearable, carry-able) devices. Note that the term “Android” also is used to refer to the “platform”,   So “Android Development” technically means developing applications that run on the specific OS, it also gets generalized to refer to developing any kind of software that interacts with the platform."
             app:trimCollapsedText="Show less"
             app:trimExpandedText="Show more"
             app:trimLength="100"
