--- a/app/src/main/res/layout/track_recommendation_item.xml
+++ b/app/src/main/res/layout/track_recommendation_item.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_track"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="@color/track_color"
     card_view:cardCornerRadius="4dp"
     card_view:cardElevation="4dp"
-    card_view:contentPadding="15dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardUseCompatPadding="true"
+    card_view:contentPadding="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/name_of_track_new"
                 android:layout_width="wrap_content"
@@ -33,9 +33,9 @@
         </LinearLayout>
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:background="@drawable/cover2" />
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:background="@drawable/android_facebook_cover" />
 
 
         <com.borjabravo.readmoretextview.ReadMoreTextView
@@ -53,16 +53,28 @@
             app:trimMode="trimModeLength" />
 
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/track_Rate_screen"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/feed_item_status_pad_left_right"
-            android:text="Rate: 30%"
-            android:textSize="15dp"
-            android:textStyle="bold" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/feed_item_status_pad_left_right"
+                android:text="Rate:"
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/track_Rate_screen"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/feed_item_status_pad_left_right"
+                android:text="30%"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
